test(eloCalculator): test eloCalculator service